added abilities and some fixes

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -82,16 +82,21 @@
     <Compile Include="Assets\Scripts\Core\IView.cs" />
     <Compile Include="Assets\Scripts\Objects\Base.cs" />
     <Compile Include="Assets\Scripts\Objects\Behaviour.cs" />
-    <Compile Include="Assets\Scripts\Objects\Bullet.cs" />
+    <Compile Include="Assets\Scripts\Objects\Bullet1.cs" />
     <Compile Include="Assets\Scripts\Objects\Character.cs" />
     <Compile Include="Assets\Scripts\Objects\Enemy.cs" />
     <Compile Include="Assets\Scripts\Objects\EnemyAgressiveBehaviour.cs" />
     <Compile Include="Assets\Scripts\Objects\FollowCamera.cs" />
+    <Compile Include="Assets\Scripts\Objects\HealingAbility.cs" />
     <Compile Include="Assets\Scripts\Objects\Health.cs" />
     <Compile Include="Assets\Scripts\Objects\Movement.cs" />
     <Compile Include="Assets\Scripts\Objects\Player.cs" />
+    <Compile Include="Assets\Scripts\Objects\RifleBullet.cs" />
     <Compile Include="Assets\Scripts\Objects\ShotgunBullet.cs" />
+    <Compile Include="Assets\Scripts\Objects\SpawnedAbility.cs" />
     <Compile Include="Assets\Scripts\Objects\Spawner.cs" />
+    <Compile Include="Assets\Scripts\Objects\StunAbility.cs" />
+    <Compile Include="Assets\Scripts\Objects\TurretAbility.cs" />
     <Compile Include="Assets\Scripts\Objects\Weapon.cs" />
     <Compile Include="Assets\Scripts\Views\BaseView.cs" />
     <Compile Include="Assets\Scripts\Views\EndGameView.cs" />
